Removed PUT /licenses/{name}/count endpoint
