# swagger.yml
@@ -3453,39 +3453,6 @@ paths:
           $ref: '#/components/responses/error'
         '500':
           $ref: '#/components/responses/error'
-  '/licenses/{name}/count':
-    put:
-      operationId: SetLicenseCount
-      description: Set the count of a certain license
-      summary: Set the count of a certain license
-      tags:
-        - api-service
-        - fe-user
-        - read
-      parameters:
-        - in: path
-          name: name
-          description: name of the license
-          required: true
-          schema:
-            type: string
-      requestBody:
-        content:
-          text/plain:
-            schema:
-              type: number
-              description: new count value
-      responses:
-        '200':
-          description: OK
-        '401':
-          $ref: '#/components/responses/error'
-        '404':
-          $ref: '#/components/responses/error'
-        '422':
-          $ref: '#/components/responses/error'
-        '500':
-          $ref: '#/components/responses/error'
   '/licenses/{name}/cost-per-processor':
     put:
       operationId: SetLicenseCostPerProcessor
